Add endpoint to update multiple runs at a time
